_DIST_FILES_IMAGES = \
./icons/nanotree/images/minus.png \
./icons/nanotree/images/plus.png \
./icons/nanotree/images/minus_last_no_root.png \
./icons/nanotree/images/minus_last.png \
./icons/nanotree/images/white.png \
./icons/nanotree/images/plus_no_root.png \
./icons/nanotree/images/line.png \
./icons/nanotree/images/plus_last_no_root.png \
./icons/nanotree/images/minus_no_root.png \
./icons/nanotree/images/t_no_root.png \
./icons/nanotree/images/t.png \
./icons/nanotree/images/plus_last.png \
./icons/nanotree/images/lastnode.png \
./icons/nanotree/images/folder_closed.png \
./icons/nanotree/images/folder_open.png \
./icons/nanotree/images/autoscan_timed_folder_closed.png \
./icons/nanotree/images/autoscan_timed_folder_open.png \
./icons/nanotree/images/autoscan_timed_config_folder_open.png \
./icons/nanotree/images/autoscan_timed_config_folder_closed.png \
./icons/nanotree/images/autoscan_inotify_folder_closed.png \
./icons/nanotree/images/autoscan_inotify_folder_open.png \
./icons/nanotree/images/autoscan_inotify_config_folder_open.png \
./icons/nanotree/images/autoscan_inotify_config_folder_closed.png

_DIST_FILES_ICONS = \
./icons/document-new.png \
./icons/folder_new.png \
./icons/go-first.png \
./icons/go-last.png \
./icons/go-next.png \
./icons/go-previous.png \
./icons/remove_all.png \
./icons/remove_this.png \
./icons/stock-add.png \
./icons/add_as_autoscan.png \
./icons/remove_autoscan.png \
./icons/stock_edit.png \
./icons/stock_exit.png \
./icons/autoscan_timed_config_folder_open.png \
./icons/autoscan_timed_folder_open.png \
./icons/autoscan_inotify_config_folder_open.png \
./icons/autoscan_inotify_folder_open.png \
./icons/folder_open.png \
./icons/status.png \
./icons/status_loading.png \
./icons/status_updates_pending.png \
./icons/mediatomb.png \
./icons/film.png \
./icons/mt-icon120.jpg \
./icons/mt-icon120.png \
./icons/mt-icon120.bmp \
./icons/mt-icon48.jpg \
./icons/mt-icon48.png \
./icons/mt-icon48.bmp \
./icons/mt-icon32.jpg \
./icons/mt-icon32.png \
./icons/mt-icon32.bmp \
./icons/blank.png \
./icons/blank.gif

_DIST_FILES_JS = \
./js/autoscan.js \
./js/md5.js \
./js/prototype.js \
./js/auth.js \
./js/tasks.js \
./js/tree.js \
./js/tools.js \
./js/items.js \
./js/icons.js \
./js/nanotree.js \
./js/iepngfix.htc

_DIST_FILES_WEB = \
./disabled.html \
./std_treelook.css \
./index.html \
./left.html \
./right.html \
./top.html \
./topleft.html \
./topright.html \
./main.css \
./cm.xml \
./cds.xml \
./favicon.ico \
./mr_reg.xml

imagesdir = $(pkgdatadir)/web/icons/nanotree/images
dist_images_DATA = $(_DIST_FILES_IMAGES)

iconsdir = $(pkgdatadir)/web/icons
dist_icons_DATA = $(_DIST_FILES_ICONS)
    
jsdir = $(pkgdatadir)/web/js
dist_js_DATA = $(_DIST_FILES_JS)

webdir = $(pkgdatadir)/web
dist_web_DATA = $(_DIST_FILES_WEB)

