SUBDIRS = js
    
#bin_SCRIPTS = tomb-install
#CLEANFILES = $(bin_SCRIPTS)

#tomb-install: tomb-install-dist.py Makefile
#	sed "s,__DEFAULT_SOURCE__,$(pkgdatadir)," \
#		< tomb-install-dist.py > tomb-install
#	chmod +x tomb-install




_DIST_FILES = \
	demo_toggle.py \
#	tomb-install-dist.py \
    mediatomb-service

EXTRA_DIST = $(_DIST_FILES)


