sharedir = @datadir@/@PACKAGE@

_DIST_FILES_IMAGES = \
./icons/nanotree/images/minus.png \
./icons/nanotree/images/plus.png \
./icons/nanotree/images/minus_last_no_root.png \
./icons/nanotree/images/minus_last.png \
./icons/nanotree/images/white.png \
./icons/nanotree/images/plus_no_root.png \
./icons/nanotree/images/minus_nolines.png \
./icons/nanotree/images/line.png \
./icons/nanotree/images/plus_last_no_root.png \
./icons/nanotree/images/minus_no_root.png \
./icons/nanotree/images/t_no_root.png \
./icons/nanotree/images/t.png \
./icons/nanotree/images/plus_last.png \
./icons/nanotree/images/lastnode.png \
./icons/nanotree/images/plus_nolines.png \
./icons/nanotree/images/folder_closed.png \
./icons/nanotree/images/folder_open.png \
./icons/nanotree/images/autoscan_folder_closed.png \
./icons/nanotree/images/autoscan_folder_open.png

_DIST_FILES_ICONS = \
./icons/document-new.png \
./icons/folder_new.png \
./icons/go-first.png \
./icons/go-last.png \
./icons/go-next.png \
./icons/go-previous.png \
./icons/remove_all.png \
./icons/remove_this.png \
./icons/stock-add.png \
./icons/add_as_autoscan.png \
./icons/remove_autoscan.png \
./icons/stock_edit.png \
./icons/stock_exit.png \
./icons/view-refresh.png

_DIST_FILES_JS = \
./js/autoscan.js \
./js/md5.js \
./js/prototype.js \
./js/auth.js \
./js/tree.js \
./js/tools.js \
./js/items.js \
./js/icons.js \
./js/nanotree.js 

_DIST_FILES_WEB = \
./disabled.html \
./std_treelook.css \
./index.html \
./left.html \
./right.html \
./top.html \
./main.css \
./cm.xml \
./cds.xml \
./mr_reg.xml    

EXTRA_DIST = $(_DIST_FILES_IMAGES) $(_DIST_FILES_JS) $(_DIST_FILES_WEB) \
             $(_DIST_FILES_ICONS)

imagesdir = $(sharedir)/web/icons/nanotree/images
images_DATA = $(_DIST_FILES_IMAGES)

iconsdir = $(sharedir)/web/icons
icons_DATA = $(_DIST_FILES_ICONS)
    
jsdir = $(sharedir)/web/js
js_DATA = $(_DIST_FILES_JS)

webdir = $(sharedir)/web
web_DATA = $(_DIST_FILES_WEB)

